[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "survey_family_growth"
version = "0.0.1"
description = "Survey results to do statisticatudies of families, fertility, and health."
authors = [
  { name = "Hector Ardila" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["survey_family_growth"]
force_sort_within_sections = true
